adding more fn to dev.to ext

--- a/article-getter/article.html
+++ b/article-getter/article.html
@@ -9,9 +9,14 @@
     </head>
 
     <body>
-        <h1>Hi, Sefat Anam</h1>
-
-        <section id="list"> </section>
+        <div>
+            <strong>Articles from Dev.to</strong>
+        </div>
+        <div style="display: flex;margin-top: 1rem;">
+            <input type="text" id="searchBox" placeholder="search by dev.to username" style="padding: .5rem;flex:1 ;">
+            <button id="searchBtn" style="padding: .5rem;">Search</button>
+        </div>
+        <section style="margin-top: 2rem;" id="list"> </section>
 
         <script src="./article.js"></script>
 
